--- a/index.html
+++ b/index.html
@@ -7,6 +7,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <!-- header section -->
+    <header>
+        
+        <nav>  
+            <div class="nav_logo">
+                <img src="./Images/Group 40071 (2).png" alt="">
+                <h1>Hero<span>Travel</span></h1>
+            </div>         
+            <ul class="nav_list">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Packages</a></li>
+                <li><a href="#">Testimonial</a></li>
+                <li><a href="#">Blog</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+
+
 </body>
 </html>
