--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
+            <i class="fa-solid fa-bars"></i>
         </nav>
     </header>
 
